# Volatility-Adaptive-Options-Market-Making-Engine

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: 01_data.ipynb  03_parquet.ipynb  04_bsm.ipynb  05_svi_calibration.ipynb  backtest_analyser.ipynb  lucic_tse_validation.ipynb  pricing_engine_exploration.ipynb  risk_manager_exploration.ipynb  sabr_exploration.ipynb  ssvi_exploration.ipynb  yfinance_test.ipynb
options-engine-ui/: package.json  pnpm-lock.yaml
options-engine-ui/app/: layout.tsx  page.tsx
scripts/: collect_bid_ask_data.py
src/: config.py  main.py  pricing_engine.py
src/api/: routes.py  websocket.py
src/backtest/: backtest_pricing_engine.py  engine.py  historical_connector.py
src/data/: base_connector.py  cleaning.py  connector_factory.py  historical_connector.py  ingestion.py  lob_snapshot.py  option_spec.py  storage.py  yfinance_connector.py
src/models/: bsm.py  sabr.py  ssvi.py  surface.py  svi.py
src/quoting/: lucic_tse.py
src/risk/: greeks.py  lucic_tse.py  reservation.py  risk_manager.py  spread.py
src/storage/: base.py  parquet_storage.py
src/utils/: data_preproccesing.py  data_preprocessing.py  time_utils.py
tests/: test_backtester.py  test_bsm.py  test_lucic_tse.py  test_parquet_storage.py  test_pricing_engine.py  test_risk_manager.py  test_sabr.py  test_ssvi.py  test_svi.py
