[project]
name = "volatility-adaptive-options-market-making-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastparquet>=2026.5.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "scipy>=1.17.1",
    "yfinance>=1.5.1",
]
