[project]
name = "volatility-adaptive-options-market-making-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastparquet>=2026.5.0",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "numba>=0.66.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "scipy>=1.17.1",
    "yfinance>=1.5.1",
]
